# meta_log

./: CMakeLists.txt
include/meta_log/: file_writer.h  logger.h  tool.h
src/: file_writer.cpp  logger.cpp  tool.cpp
test/: log_test.cpp
